--- a/style.css
+++ b/style.css
@@ -12,10 +12,13 @@ body {
     margin: 0;
     padding: 0;
 }
-
+body h1{
+    text-align: center;
+    padding: 19px;
+}
 /* Container for the form */
 .container {
-    width: 80%;
+    width: 40%;
     margin: 0 auto;
     padding: 20px;
 }
@@ -26,7 +29,7 @@ form {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 20px;
+    /* margin: 20px 150px 20px 150px ; */
 }
 
 /* Input and Select Fields */
